--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -1,14 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Edit the <%= campground.title %> campground</title>
-</head>
-
-<body>
+<% layout("layouts/boilerplate") %>
     <h1>Edit the <%= campground.title %> campground:</h1>
 
     <form action="/campgrounds/<%= campground._id %>?_method=PUT" method="POST">
@@ -20,6 +10,3 @@
     </form>
 
     <a href="/campgrounds/<%=  campground._id%>">Back to campground</a>
-</body>
-
-</html>
