--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -1,14 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Create a new campground</title>
-</head>
-
-<body>
+<% layout("layouts/boilerplate") %>
 
     <form action="/campgrounds" method="POST">
 
@@ -22,7 +12,3 @@
     <footer>
         <a href="/campgrounds">Back to all campgrounds</a>
     </footer>
-
-</body>
-
-</html>
