--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,14 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Campground details</title>
-</head>
-
-<body>
+<% layout("layouts/boilerplate") %>
     <h1>Here are the details of the <%= campground.title %> campground:</h1>
     <ul>
         <li>
@@ -26,6 +16,3 @@
             <li><a href="/campgrounds">Back to all campgrounds</a></li>
         </ul>
     </footer>
-</body>
-
-</html>
