Added basic BStrap styling to campground pages, seeded DB with images and descriptions

--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -1,12 +1,40 @@
 <% layout("layouts/boilerplate") %>
     <h1>Edit the <%= campground.title %> campground:</h1>
 
-    <form action="/campgrounds/<%= campground._id %>?_method=PUT" method="POST">
-        <label for="title">Edit the title</label>
-        <input type="text" name="campground[title]" id="title" value="<%= campground.title %>">
-        <label for="location">Edit the location</label>
-        <input type="text" id="location" name="campground[location]" value="<%= campground.location %>">
-        <button>Edit Campground</button>
-    </form>
+    <h1 class="text-center">Edit Campground</h1>
+    <div class="col-6 offset-3">
+        <form action="/campgrounds/<%= campground._id %>?_method=PUT" method="POST">
 
-    <a href="/campgrounds/<%=  campground._id%>">Back to campground</a>
+            <div class="mb-3"><label class="form-label" for="title">Edit the campground name:</label>
+                <input class="form-control" type="text" id="title" name="campground[title]"
+                    value="<%= campground.title %>">
+            </div>
+            <div class="mb-3"><label class="form-label" for="location">Edit the campground location</label>
+                <input class="form-control" type="text" id="location" name="campground[location]"
+                    value="<%= campground.location %>">
+            </div>
+            <div class="mb-3">
+                <label for="price" class="form-label">Edit the campground price:</label>
+                <div class="input-group">
+                    <span class="input-group-text" id="price-label">$</span>
+                    <input type="text" class="form-control" placeholder="0.00" aria-label="price"
+                        name="campground[price]" id="price" aria-describedby="price-label"
+                        value="<%= campground.price %>">
+                </div>
+            </div>
+            <div class="mb-3"><label class="form-label" for="image">Enter the URL of the new image</label>
+                <input class="form-control" type="text" id="image" name="campground[image]"
+                    value="<%= campground.image %>">
+            </div>
+            <div class="mb-3">
+                <label class="form-label" for="description">Edit the campground description</label>
+                <textarea class="form-control" type="text" id="description"
+                    name="campground[description]"><%= campground.description %></textarea>
+            </div>
+            <button class="btn btn-info mb-2">Edit campground</button>
+            <a href="/campgrounds/<%= campground._id %>" class="btn btn-success mb-2">Cancel and go back to campground
+                page</a>
+
+        </form>
+        <a href="/campgrounds" class="btn btn-primary">Back to all campgrounds</a>
+    </div>
