--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -3,8 +3,27 @@
     <a href="/campgrounds/new">Create a new campground</a>
     <ul>
         <% for (let campground of campgrounds) { %>
-            <li>
-                Camp name : <%= campground.title %> - <a href="/campgrounds/<%= campground._id %>">Details</a>
-            </li>
+            <div class="card mb-3">
+                <div class="row">
+                    <div class="col-md-4">
+                        <img class="img-fluid" src="<%= campground.image %>" alt="Stock photo of a campground"
+                            style="max-height: 300px;">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body d-flex flex-column justify-content-center align-items-center">
+                            <h5 class="card-title">
+                                <%= campground.title %>
+                            </h5>
+                            <p class="card-text">
+                                <%= campground.description %>
+                            </p>
+                            <p class="card-text"><small class="text-muted">
+                                    <%= campground.location %>
+                                </small></p>
+                            <a href="/campgrounds/<%= campground._id %>" class="btn btn-warning">Show details</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <% } %>
     </ul>
