--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -2,28 +2,34 @@
 
     <h1 class="text-center">New Campground</h1>
     <div class="col-6 offset-3">
-        <form action="/campgrounds" method="POST">
+        <form action="/campgrounds" method="POST" novalidate class="validated-form">
 
             <div class="mb-3"><label class="form-label" for="title">Enter the campground name:</label>
-                <input class="form-control" type="text" id="title" name="campground[title]">
+                <input class="form-control" type="text" id="title" name="campground[title]" required>
+                <div class="valid-feedback">Looks good!</div>
             </div>
             <div class="mb-3"><label class="form-label" for="location">Enter the campground location</label>
-                <input class="form-control" type="text" id="location" name="campground[location]">
+                <input class="form-control" type="text" id="location" name="campground[location]" required>
+                <div class="valid-feedback">Looks good!</div>
             </div>
             <div class="mb-3">
                 <label for="price" class="form-label">Campground price:</label>
                 <div class="input-group">
                     <span class="input-group-text" id="price-label">$</span>
                     <input type="text" class="form-control" placeholder="0.00" aria-label="price"
-                        name="campground[price]" id="price" aria-describedby="price-label">
+                        name="campground[price]" id="price" aria-describedby="price-label" required>
+                    <div class="valid-feedback">Looks good!</div>
                 </div>
             </div>
             <div class="mb-3"><label class="form-label" for="image">Enter the URL of the image</label>
-                <input class="form-control" type="text" id="image" name="campground[image]">
+                <input class="form-control" type="text" id="image" name="campground[image]" required>
+                <div class="valid-feedback">Looks good!</div>
             </div>
             <div class="mb-3">
                 <label class="form-label" for="description">Enter the campground description</label>
-                <textarea class="form-control" type="text" id="description" name="campground[description]"></textarea>
+                <textarea class="form-control" type="text" id="description" name="campground[description]"
+                    required></textarea>
+                <div class="valid-feedback">Looks good!</div>
             </div>
             <button class="btn btn-success mb-5">Submit</button>
         </form>
