--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -2,7 +2,7 @@
 
     <div class="row">
         <div class="col-6 offset-3">
-            <div class="card mb-4" style="width: 18rem;">
+            <div class="card mb-4">
                 <img src="<%= campground.image %>" class="card-img-top"
                     alt="Stock photo to represent the current camping">
                 <div class="card-body">
@@ -27,5 +27,29 @@
                     <a href="/campgrounds" class="card-link btn btn-primary mt-3">To all campgrounds</a>
                 </div>
             </div>
+            <h2>Leave a review</h2>
+            <form action="/campgrounds/<%= campground._id %>/reviews" class="mb-3 validated-form" novalidate
+                method="POST">
+                <div class="mb-3">
+                    <label for="rating">Rating:</label>
+                    <input class="form-range" type="range" min="1" max="5" name="review[rating]" id="rating">
+                </div>
+                <div class="mb-3">
+                    <label for="body" class="form-label">Type your review here:</label>
+                    <textarea class="form-control" name="review[body]" id="body" cols="30" rows="3" required></textarea>
+                    <div class="valid-feedback">Looks good!</div>
+                </div>
+                <button class="btn btn-success">Submit</button>
+            </form>
+            <% for (let review of campground.reviews) { %>
+                <div class="card">
+                    <div class="mb-3 card-body">
+                        <p>Rating: <%= review.rating %>
+                        </p>
+                        <p>Review: <%= review.body %>
+                        </p>
+                    </div>
+                </div>
+                <% } %>
         </div>
     </div>
