--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,7 +1,7 @@
 <% layout("layouts/boilerplate") %>
 
     <div class="row">
-        <div class="col-6 offset-3">
+        <div class="col-6">
             <div class="card mb-4">
                 <img src="<%= campground.image %>" class="card-img-top"
                     alt="Stock photo to represent the current camping">
@@ -27,6 +27,8 @@
                     <a href="/campgrounds" class="card-link btn btn-primary mt-3">To all campgrounds</a>
                 </div>
             </div>
+        </div>
+        <div class="col-6">
             <h2>Leave a review</h2>
             <form action="/campgrounds/<%= campground._id %>/reviews" class="mb-3 validated-form" novalidate
                 method="POST">
@@ -42,12 +44,17 @@
                 <button class="btn btn-success">Submit</button>
             </form>
             <% for (let review of campground.reviews) { %>
-                <div class="card">
-                    <div class="mb-3 card-body">
+                <div class="mb-3 card">
+                    <div class="card-body">
+                        <h5 class="card-title">Name of the commenter</h5>
                         <p>Rating: <%= review.rating %>
                         </p>
                         <p>Review: <%= review.body %>
                         </p>
+                        <form action="/campgrounds/<%= campground._id%>/reviews/<%= review._id %>?_method=DELETE"
+                            method="POST">
+                            <button class="btn btn-sm btn-danger">Delete</button>
+                        </form>
                     </div>
                 </div>
                 <% } %>
