--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -16,12 +16,16 @@
     <%- include("../partials/navbar"); %>
 
         <main class="container mt-5">
-            <%- body %>
+            <%- include("../partials/flash"); %>
+                <%- body %>
         </main>
 
 
         <%- include("../partials/footer"); %>
             <script src="/javascripts/validateForms.js"></script>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+                integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+                crossorigin="anonymous"></script>
 </body>
 
 </html>
