--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -17,6 +17,14 @@
                     <a class="nav-link" href="/campgrounds/new">New campground</a>
                 </li>
             </ul>
+            <ul class="navbar-nav ms-auto">
+                <% if(!currentUser) { %>
+                    <li><a class="nav-link" href="/login">Login</a></li>
+                    <li><a class="nav-link" href="/signup">Sign up</a></li>
+                    <% } else { %>
+                        <li><a class="nav-link" href="/logout">Logout</a></li>
+                        <% } %>
+            </ul>
         </div>
     </div>
 </nav>
