--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -17,14 +17,19 @@
                     <li class="list-group-item text-muted">
                         <%= campground.location %>
                     </li>
+                    <li class="list-group-item ">
+                        Submitted by: <%= campground.author.username %>
+                    </li>
                     <li class="list-group-item">$<%= campground.price %> / night</li>
                 </ul>
                 <div class="card-body">
-                    <a href="/campgrounds/<%= campground._id %>/edit" class="card-link btn btn-info">Edit</a>
-                    <form class="d-inline" action="/campgrounds/<%= campground._id%>?_method=DELETE" method="POST">
-                        <button class="btn btn-danger">Delete campground</button>
-                    </form>
-                    <a href="/campgrounds" class="card-link btn btn-primary mt-3">To all campgrounds</a>
+                    <% if (currentUser && campground.author.equals(currentUser._id)) { %>
+                        <a href="/campgrounds/<%= campground._id %>/edit" class="card-link btn btn-info">Edit</a>
+                        <form class="d-inline" action="/campgrounds/<%= campground._id%>?_method=DELETE" method="POST">
+                            <button class="btn btn-danger">Delete campground</button>
+                        </form>
+                        <% } %>
+                            <a href="/campgrounds" class="card-link btn btn-primary mt-3">To all campgrounds</a>
                 </div>
             </div>
         </div>
