--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,4 +1,5 @@
 <% layout("layouts/boilerplate") %>
+    <link rel="stylesheet" href="/stylesheets/starRating.css">
 
     <div class="row">
         <div class="col-6">
@@ -39,8 +40,21 @@
                 <form action="/campgrounds/<%= campground._id %>/reviews" class="mb-3 validated-form" novalidate
                     method="POST">
                     <div class="mb-3">
-                        <label for="rating">Rating:</label>
-                        <input class="form-range" type="range" min="1" max="5" name="review[rating]" id="rating">
+                        <fieldset class="starability-basic">
+                            <legend>Rating:</legend>
+                            <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="1"
+                                checked aria-label="No rating." />
+                            <input type="radio" id="first-rate1" name="review[rating]" value="1" />
+                            <label for="first-rate1" title="Terrible">1 star</label>
+                            <input type="radio" id="first-rate2" name="review[rating]" value="2" />
+                            <label for="first-rate2" title="Not good">2 stars</label>
+                            <input type="radio" id="first-rate3" name="review[rating]" value="3" />
+                            <label for="first-rate3" title="Average">3 stars</label>
+                            <input type="radio" id="first-rate4" name="review[rating]" value="4" />
+                            <label for="first-rate4" title="Very good">4 stars</label>
+                            <input type="radio" id="first-rate5" name="review[rating]" value="5" />
+                            <label for="first-rate5" title="Amazing">5 stars</label>
+                        </fieldset>
                     </div>
                     <div class="mb-3">
                         <label for="body" class="form-label">Type your review here:</label>
@@ -55,10 +69,10 @@
                         <div class="mb-3 card">
                             <div class="card-body">
                                 <h5 class="card-title">
-                                    Rating: <%= review.rating %>
+                                    <%= review.author.username %>
                                 </h5>
-                                <p class="card-subtitle text-muted">
-                                    Submitted by: <%= review.author.username %>
+                                <p class="starability-result" data-rating="<%=review.rating %>">
+                                    Rated: <%= review.rating %> stars
                                 </p>
                                 <p>
                                     <%= review.body %>
