--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -3,9 +3,28 @@
 
     <div class="row">
         <div class="col-6">
+            <div id="campgroundCarousel" class="carousel slide">
+                <div class="carousel-inner">
+                    <% campground.images.forEach((element, index)=> { %>
+                        <div class="carousel-item <%= index === 0 ? 'active' : '' %>">
+                            <img src="<%= element.url %>" class="d-block w-100" alt="Stock photo of a camping">
+                        </div>
+                        <% }) %>
+                </div>
+                <% if(campground.images.length> 1) { %>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#campgroundCarousel"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#campgroundCarousel"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                    <% } %>
+            </div>
             <div class="card mb-4">
-                <img src="<%= campground.image %>" class="card-img-top"
-                    alt="Stock photo to represent the current camping">
                 <div class="card-body">
                     <h5 class="card-title">
                         <%= campground.title %>
