--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -6,8 +6,14 @@
             <div class="card mb-3">
                 <div class="row">
                     <div class="col-md-4">
-                        <img class="img-fluid" src="<%= campground.images[0].url %>" alt="Stock photo of a campground"
-                            style="max-height: 300px;">
+                        <% if (campground.images.length) { %>
+                            <img class="img-fluid" src="<%= campground.images[0].url %>"
+                                alt="Stock photo of a campground" style="max-height: 300px;">
+                            <% } else { %>
+                                <img class="img-fluid"
+                                    src="https://res.cloudinary.com/dkgjp7bfh/image/upload/v1672668710/Yelpcamp/stceu9visr3jjubthlme.jpg"
+                                    alt="Default photo of a campground">
+                                <% } %>
                     </div>
                     <div class="col-md-8">
                         <div class="card-body d-flex flex-column justify-content-center align-items-center">
