--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -5,11 +5,17 @@
         <div class="col-6">
             <div id="campgroundCarousel" class="carousel slide">
                 <div class="carousel-inner">
-                    <% campground.images.forEach((element, index)=> { %>
-                        <div class="carousel-item <%= index === 0 ? 'active' : '' %>">
-                            <img src="<%= element.url %>" class="d-block w-100" alt="Stock photo of a camping">
+                    <% if (campground.images.length===0) {%>
+                        <div class="carousel-item active">
+                            <img src="https://res.cloudinary.com/dkgjp7bfh/image/upload/v1672668710/Yelpcamp/stceu9visr3jjubthlme.jpg"
+                                class="d-block w-100" alt="Stock photo of a camping">
                         </div>
-                        <% }) %>
+                        <% } else { %>
+                            <% campground.images.forEach((element, index)=> { %>
+                                <div class="carousel-item <%= index === 0 ? 'active' : '' %>">
+                                    <img src="<%= element.url %>" class="d-block w-100" alt="Stock photo of a camping">
+                                </div>
+                                <% }) %>
                 </div>
                 <% if(campground.images.length> 1) { %>
                     <button class="carousel-control-prev" type="button" data-bs-target="#campgroundCarousel"
@@ -23,6 +29,7 @@
                         <span class="visually-hidden">Next</span>
                     </button>
                     <% } %>
+                        <% } %>
             </div>
             <div class="card mb-4">
                 <div class="card-body">
@@ -54,6 +61,7 @@
             </div>
         </div>
         <div class="col-6">
+            <div id='map' style='width: 400px; height: 300px;' class="mb-3 ms-auto me-auto"></div>
             <h2>Leave a review</h2>
             <% if (currentUser) { %>
                 <form action="/campgrounds/<%= campground._id %>/reviews" class="mb-3 validated-form" novalidate
@@ -108,3 +116,9 @@
                         <% } %>
         </div>
     </div>
+
+    <script>
+        const mapToken = '<%- process.env.MAPBOX_TOKEN %>';
+        const campground = <%-JSON.stringify(campground) %>;
+    </script>
+    <script src="/javascripts/showPageMap.js"></script>
