--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,4 +1,6 @@
 <% layout("layouts/boilerplate") %>
+
+    <div id="map" style="width: 100%; height: 500px" class="mb-4"></div>
     <h1>All campgrounds</h1>
     <a href="/campgrounds/new">Create a new campground</a>
     <ul>
@@ -33,3 +35,9 @@
             </div>
             <% } %>
     </ul>
+
+
+    <script>
+        const mapToken = '<%-process.env.MAPBOX_TOKEN%>'
+    </script>
+    <script src="/javascripts/clusterMap.js"></script>
