--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,6 +1,7 @@
 <% layout("layouts/boilerplate") %>
+<link rel="stylesheet" href="/stylesheets/app.css">
 
-    <div id="map" style="width: 100%; height: 500px" class="mb-4"></div>
+    <div id="cluster-map" class="mb-4"></div>
     <h1>All campgrounds</h1>
     <a href="/campgrounds/new">Create a new campground</a>
     <ul>
