--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -1,18 +1,40 @@
-<% layout("layouts/boilerplate") %>
-    <h1>Sign up</h1>
+<% layout('layouts/boilerplate')%>
+    <div class="container d-flex justify-content-center align-items-center mt-5">
+        <div class="row">
+            <div class="col-md-6 offset-md-3 col-xl-4 offset-xl-4">
+                <div class="card shadow">
+                    <img src="https://images.unsplash.com/photo-1478131143081-80f7f84ca84d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1740&q=80"
+                        alt="" class="card-img-top" />
+                    <div class="card-body">
+                        <h5 class="card-title">Register</h5>
+                        <form action="/register" method="POST" class="validated-form" novalidate>
+                            <div class="mb-3">
+                                <label class="form-label" for="username">Username</label>
+                                <input class="form-control" type="text" id="username" name="username" required
+                                    autofocus>
+                                <div class="valid-feedback">
+                                    Looks good!
+                                </div>
+                            </div>
+                            <div class="mb-3">
+                                <label class="form-label" for="email">Email</label>
+                                <input class="form-control" type="email" id="email" name="email" required>
+                                <div class="valid-feedback">
+                                    Looks good!
+                                </div>
+                            </div>
+                            <div class="mb-3">
+                                <label class="form-label" for="password">Password</label>
+                                <input class="form-control" type="password" id="password" name="password" required>
+                                <div class="valid-feedback">
+                                    Looks good!
+                                </div>
+                            </div>
+                            <button class="btn btn-success btn-block">Register</button>
+                        </form>
 
-    <form action="/signup" method="POST" class="validated-form" novalidate>
-        <div class="mb-3"><label class="form-label" for="username">Username</label>
-            <input class="form-control" type="text" id="username" name="username" required>
-            <div class="valid-feedback">Looks good!</div>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="mb-3"><label class="form-label" for="email">Email:</label>
-            <input class="form-control" type="email" id="email" name="email" required>
-            <div class="valid-feedback">Looks good!</div>
-        </div>
-        <div class="mb-3"><label class="form-label" for="password">Password:</label>
-            <input class="form-control" type="password" id="password" name="password" required>
-            <div class="valid-feedback">Looks good!</div>
-        </div>
-        <button class="btn btn-success">Sign up</button>
-    </form>
+    </div>
