--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -1,6 +1,6 @@
 <% layout("layouts/boilerplate") %>
 
-    <h1 class="text-center">New Campground</h1>
+    <h1 class="text-center mb-5">New Campground</h1>
     <div class="col-6 offset-3">
         <form action="/campgrounds" method="POST" novalidate class="validated-form" enctype="multipart/form-data">
 
