--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -7,7 +7,7 @@
                         alt="" class="card-img-top" />
                     <div class="card-body">
                         <h5 class="card-title">Register</h5>
-                        <form action="/register" method="POST" class="validated-form" novalidate>
+                        <form action="/signup" method="POST" class="validated-form" novalidate>
                             <div class="mb-3">
                                 <label class="form-label" for="username">Username</label>
                                 <input class="form-control" type="text" id="username" name="username" required
