--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,9 +1,9 @@
 <% layout("layouts/boilerplate") %>
-<link rel="stylesheet" href="/stylesheets/app.css">
+    <link rel="stylesheet" href="/stylesheets/app.css">
 
     <div id="cluster-map" class="mb-4"></div>
-    <h1>All campgrounds</h1>
-    <a href="/campgrounds/new">Create a new campground</a>
+    <h1 class="mb-3">All campgrounds</h1>
+    <a href="/campgrounds/new" class="btn btn-success mb-4">Create a new campground</a>
     <ul>
         <% for (let campground of campgrounds) { %>
             <div class="card mb-3">
@@ -19,7 +19,7 @@
                                 <% } %>
                     </div>
                     <div class="col-md-8">
-                        <div class="card-body d-flex flex-column justify-content-center align-items-center">
+                        <div class="card-body h-100 d-flex flex-column justify-content-center align-items-center">
                             <h5 class="card-title">
                                 <%= campground.title %>
                             </h5>
@@ -40,6 +40,6 @@
 
     <script>
         const mapToken = '<%-process.env.MAPBOX_TOKEN%>';
-        const campgrounds = {features: <%-JSON.stringify(campgrounds)%>}
+        const campgrounds = { features: <%-JSON.stringify(campgrounds)%>}
     </script>
     <script src="/javascripts/clusterMap.js"></script>
