--- a/views/home.ejs
+++ b/views/home.ejs
@@ -20,7 +20,7 @@
                     <a class="nav-link" href="/campgrounds">Campgrounds</a>
                     <% if(!currentUser) { %>
                         <a class="nav-link" href="/login">Login</a>
-                        <a class="nav-link" href="/register">Register</a>
+                        <a class="nav-link" href="/signup">Sign up</a>
                         <% } else { %>
                             <a class="nav-link" href="/logout">Logout</a>
                             <% } %>
