Changed homepage styling, centered footer content

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -12,24 +12,9 @@
 
 <body class="d-flex text-center text-white bg-dark">
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
-        <header class="mb-auto">
-            <div>
-                <h3 class="float-md-left mb-0">YelpCamp</h3>
-                <nav class="nav nav-masthead justify-content-center float-md-right">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    <a class="nav-link" href="/campgrounds">Campgrounds</a>
-                    <% if(!currentUser) { %>
-                        <a class="nav-link" href="/login">Login</a>
-                        <a class="nav-link" href="/signup">Sign up</a>
-                        <% } else { %>
-                            <a class="nav-link" href="/logout">Logout</a>
-                            <% } %>
-                </nav>
-            </div>
-        </header>
-        <main class="px-3">
-            <h1>YelpCamp</h1>
-            <p class="lead"> Welcome to YelpCamp! <br> Jump right in and explore our many campgrounds. <br>
+        <main class="px-3 mt-auto mb-auto">
+            <h1 class="mb-3">YelpCamp</h1>
+            <p class="lead mb-5"> Welcome to YelpCamp! <br> Jump right in and explore our many campgrounds. <br>
                 Feel free to share some of your own and comment on others!</p>
             <a href="/campgrounds" class="btn btn-lg btn-secondary font-weight-bold border-white bg-white">View
                 Campgrounds</a>
@@ -38,8 +23,6 @@
         <footer class="mt-auto text-white-50">
             <p>&copy; 2023 Yelpcamp </p>
         </footer>
-
-
     </div>
 
 
