--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,5 @@
 <footer class="footer bg-dark text-light py-3 mt-auto">
-    <div class="container">
+    <div class="container text-center">
         <span>©YelpCamp 2023</span>
     </div>
 </footer>
